# DeepCode

./: .dockerignore  .gitattributes  .gitignore  ATTRIBUTION.md  CITATION.cff  Cargo.toml  Dockerfile.dev  Dockerfile.tauri  LICENSE  Makefile  NOTICE.md  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  build.sh  entrypoint.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.sh  tsconfig.base.json
.cargo/: config.toml
client/: index.html  package.json  tsconfig.json  vite.config.ts
client/src/: i18n.ts  main.tsx
client/src/app/: App.tsx  app.css
client/src/services/: apiClient.ts  heartbeatSocket.ts  permissionGate.ts  runtimeAdapter.ts  toolRegistry.ts
client/src/state/: agentSessionStore.ts  appStatusStore.ts  editorStore.ts  settingsStore.ts  uiStore.ts  workspaceStore.ts
client/src/types/: ui.ts
config/i18n/: en-US.json  zh-CN.json
crates/deepcode-host-web/: Cargo.toml
crates/deepcode-host-web/src/: main.rs
crates/deepcode-kernel-abi/: Cargo.toml
crates/deepcode-kernel-abi/src/: command.rs  config.rs  driver.rs  error.rs  event.rs  ids.rs  lib.rs  llm.rs  permissions.rs  refs.rs  run.rs  snapshot.rs  workflow.rs  workspace.rs
crates/deepcode-kernel-abi/src/tests/: command_roundtrip.rs  event_roundtrip.rs  mod.rs  placeholder_roundtrip.rs  snapshot_roundtrip.rs
crates/deepcode-kernel-abi/tests/: root_roundtrip.rs
crates/deepcode-kernel-audit/: Cargo.toml
crates/deepcode-kernel-audit/src/: lib.rs
crates/deepcode-kernel-client/: Cargo.toml
crates/deepcode-kernel-client/src/: lib.rs
crates/deepcode-kernel-config/: Cargo.toml
crates/deepcode-kernel-config/src/: lib.rs
crates/deepcode-kernel-context/: Cargo.toml
crates/deepcode-kernel-context/src/: lib.rs
crates/deepcode-kernel-core/: Cargo.toml
crates/deepcode-kernel-core/src/: lib.rs
crates/deepcode-kernel-daemon/: Cargo.toml
crates/deepcode-kernel-daemon/src/: agent_api.rs  agent_loop.rs  agent_timeline.rs  api_response.rs  browser_api.rs  event_projection.rs  git_api.rs  ipc.rs  kernel_api.rs  llm_transport.rs  main.rs  prelude.rs  routes.rs  session_store.rs  settings_api.rs  skill_api.rs  state.rs  static_assets.rs  terminal_api.rs  utils.rs  workspace_api.rs
crates/deepcode-kernel-ledger/: Cargo.toml
crates/deepcode-kernel-ledger/src/: lib.rs
crates/deepcode-kernel-policy/: Cargo.toml
crates/deepcode-kernel-policy/src/: lib.rs  workspace_boundary.rs
crates/deepcode-kernel-prompt/: Cargo.toml
crates/deepcode-kernel-prompt/src/: lib.rs
crates/deepcode-kernel-runtime/: Cargo.toml
crates/deepcode-kernel-runtime/src/: action_batch.rs  context.rs  dispatch.rs  lib.rs  llm.rs  obligations.rs  permissions.rs  state.rs  temp_artifacts.rs  tests.rs  tools.rs  workflow.rs  workspace.rs
crates/deepcode-kernel-skills/: Cargo.toml
crates/deepcode-kernel-skills/src/: builtin.rs  catalog.rs  executor.rs  file_content.rs  hash.rs  lib.rs  manifest.rs  mcp.rs  plugin.rs  risk.rs  scanner.rs  trust_record.rs
crates/deepcode-kernel-skills/tests/: skill_mcp_smoke.rs
crates/deepcode-kernel-tools/: Cargo.toml
crates/deepcode-kernel-tools/src/: lib.rs
crates/deepcode-kernel-workflow/: Cargo.toml
crates/deepcode-kernel-workflow/docs/: descriptor.md
crates/deepcode-kernel-workflow/src/: contract.rs  controller.rs  decision_engine.rs  descriptor.rs  error.rs  interpreter.rs  lib.rs  machine.rs  outcome.rs  phase.rs  plan_review_engine.rs  predicate.rs  proposal.rs  state.rs  template.rs  validator.rs
crates/deepcode-kernel-workflow/templates/: plan-check-complete-review.yaml
fixtures/agent-actions/: 001-read-search.deepcode.md  002-shell-propose.deepcode.md  003-patch-plan.deepcode.md  004-invalid-action.deepcode.md  005-skill-ruler-context.deepcode.md  006-agent-mini-loop.deepcode.md  007-shell-exec.deepcode.md  008-workflow-transition.deepcode.json  009-markdown-render.deepcode.md
fixtures/agent-workflow/: identity-temp-lifecycle.request.txt  permission-resume-accepted-tool.json
fixtures/skill-mcp-smoke/: README.md
fixtures/skill-mcp-smoke/plugin/: text-tools.plugin.json
scripts/: cargo-with-fallback.sh  clean-caches.sh  macos-package-service.sh  package-macos.sh
server/: package.json  tsconfig.json
server/src/: index.ts
server/src/api/: agentActionRoutes.ts  agentRoutes.ts  agentToolRoutes.ts  browserRoutes.ts  codeSearchRoutes.ts  fileRoutes.ts  fsBrowseRoutes.ts  healthRoutes.ts  llmRoutes.ts  runtimeRoutes.ts  terminalRoutes.ts  userSettingsRoutes.ts  workspaceRoutes.ts
server/src/security/: localHostGuard.ts
server/src/services/: agentActionParserService.ts  agentContextSourceService.ts  agentSessionStore.ts  agentToolService.ts  agentTraceLedgerService.ts  agentWorkflowConfigService.ts  appDataPath.ts  browserRuntimeService.ts  codeSearchService.ts  configService.ts  fileService.ts  fsBrowseService.ts  llmProfileService.ts  llmService.ts  persistentFileService.ts  runtimeShellService.ts  secretStore.ts  terminalService.ts  userSettingsService.ts  workspaceService.ts
server/src/types/: server.ts
server/src/ws/: heartbeatWs.ts
shells/cli/: Cargo.toml
shells/cli/src/: main.rs
shells/deepcode-gui/: package.json
shells/deepcode-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
shells/tauri/: README.md  package.json
shells/tauri/boot-ui/: index.html
shells/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
shells/tauri/src-tauri/src/: main.rs
shells/tui/: Cargo.toml
shells/tui/src/: app.rs  main.rs  model.rs  renderer.rs
source/deepcode-ui-icon-resources/: README.md  manifest.json
tauri/: .gitignore  README.md  package.json
tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: README.md  icon.icns
tauri/src-tauri/src/: agent.rs  commands.rs  fs.rs  llm_profiles.rs  main.rs  terminal.rs  user_settings.rs  workspace.rs
userspace/gui/: deepcode-gui.html  index.html  package.json  tsconfig.json  vite.config.ts  vite.deepcode-gui.config.ts
userspace/protocol/: package.json
userspace/session-core/: package.json  tsconfig.json
(+267 files in other folders)
