[workspace]
members = [
  "crates/deepcode-kernel-abi",
  "crates/deepcode-kernel-core",
  "crates/deepcode-kernel-config",
  "crates/deepcode-kernel-context",
  "crates/deepcode-kernel-policy",
  "crates/deepcode-kernel-prompt",
  "crates/deepcode-kernel-runtime",
  "crates/deepcode-kernel-skills",
  "crates/deepcode-kernel-workflow",
  "crates/deepcode-kernel-ledger",
  "crates/deepcode-kernel-audit",
  "crates/deepcode-kernel-client",
  "crates/deepcode-kernel-daemon",
  "crates/deepcode-host-web",
  "shells/cli",
  "shells/tui",
]
exclude = [
  "shells/tauri/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["DeepCode Team"]

[profile.dev]
incremental = true

[profile.release]
incremental = true

[workspace.dependencies]
deepcode-kernel-abi = { path = "crates/deepcode-kernel-abi" }
deepcode-kernel-config = { path = "crates/deepcode-kernel-config" }
deepcode-kernel-context = { path = "crates/deepcode-kernel-context" }
deepcode-kernel-ledger = { path = "crates/deepcode-kernel-ledger" }
deepcode-kernel-policy = { path = "crates/deepcode-kernel-policy" }
deepcode-kernel-prompt = { path = "crates/deepcode-kernel-prompt" }
deepcode-kernel-runtime = { path = "crates/deepcode-kernel-runtime" }
deepcode-kernel-skills = { path = "crates/deepcode-kernel-skills" }
deepcode-kernel-workflow = { path = "crates/deepcode-kernel-workflow" }
deepcode-kernel-daemon = { path = "crates/deepcode-kernel-daemon" }
deepcode-kernel-audit = { path = "crates/deepcode-kernel-audit" }
deepcode-kernel-client = { path = "crates/deepcode-kernel-client" }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
ratatui = "0.29"
crossterm = "0.28"
portable-pty = "0.8"
