[package]
name = "deepcode-host-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DeepCode Rust Web host adapter backed by the unified Kernel runtime."

[dependencies]
axum.workspace = true
deepcode-kernel-abi.workspace = true
deepcode-kernel-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
reqwest.workspace = true
