[package]
name = "deepcode-kernel-abi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DeepCode Kernel ABI DTOs shared by future GUI, CLI, TUI, and dev hosts."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
