[package]
name = "deepcode-kernel-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DeepCode Kernel context snapshot and evidence runtime primitives."

[dependencies]
deepcode-kernel-abi.workspace = true
serde.workspace = true
serde_json.workspace = true
