[package]
name = "deepcode-kernel-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DeepCode Kernel daemon that owns runtime, provider transport, and localhost API."

[dependencies]
axum.workspace = true
deepcode-kernel-abi.workspace = true
deepcode-kernel-ledger.workspace = true
deepcode-kernel-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
reqwest.workspace = true
portable-pty.workspace = true
async-stream.workspace = true
bytes.workspace = true
