[package]
name = "deepcode-kernel-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DeepCode Kernel event ledger interface skeletons."

[dependencies]
deepcode-kernel-abi.workspace = true
serde.workspace = true
serde_json.workspace = true
