[package]
name = "deepcode-kernel-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DeepCode Kernel skill descriptor and runtime interface skeletons."

[dependencies]
deepcode-kernel-abi.workspace = true
deepcode-kernel-policy.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
