[package]
name = "deepcode-kernel-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DeepCode kernel tool registry, operation compiler, and work-unit graph metadata."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
