[package]
name = "deepcode-kernel-workflow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DeepCode Kernel workflow, WorkUnit, ChangeSet, and review interface skeletons."

[dependencies]
deepcode-kernel-abi.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
