[package]
name = "deepcode"
version = "0.1.0"
description = "DeepCode 桌面壳"
authors = ["DeepCode Team"]
edition = "2021"
rust-version = "1.77"

# 应用二进制；产物名为 "deepcode"
[[bin]]
name = "deepcode"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[features]
# 默认发布版裁剪 dev tools；开发时由 tauri dev 注入
custom-protocol = ["tauri/custom-protocol"]
