[package]
name = "deepcode"
version = "0.1.0"
description = "DeepCode 桌面壳"
authors = ["DeepCode Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

# 应用二进制；产物名为 "deepcode"
[[bin]]
name = "deepcode"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# devtools feature 用于 release 构建中保留 F12 DevTools（排查 webview 异常时必须）；
# 临时打开，定位问题后可改回 features = []
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri-plugin-fs = "2"
# ISO 8601 时间格式化；替代 src/workspace.rs 中手写的 humantime_iso 实现
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[features]
# 默认发布版裁剪 dev tools；开发时由 tauri dev 注入
custom-protocol = ["tauri/custom-protocol"]
