[workspace]

[package]
name = "deepcode-tauri-shell"
version = "0.5.24"
edition = "2021"
license = "MIT"
rust-version = "1.77"

[[bin]]
name = "DeepCode"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11.2", features = [] }
